Changed some variable names, fixed spacing in heading

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ i.disabled {
   margin: 0;
   margin-bottom: 50px;
   /* font-weight: normal; */
-  background-image: -webkit-linear-gradient(#022486 0%, #0AD0FD 30%, #BDFCFC 40%, #D8FFFF 44%, #00081C 44%, #00081C 50%, #074A67 52%, #1CD8FE 60%, #7FEDFE 62%, #96F5FC 70%, #0FD8FA 73%, #0BD2FD 88%, #AFFDFF 100%);
+  background-image: -webkit-linear-gradient(#022486 0%, #0AD0FD 30%, #BDFCFC 40%, #D8FFFF 44%, #00081C 44%, #00081C 50%, rgb(50, 67, 75) 52%, #1CD8FE 60%, #7FEDFE 62%, #96F5FC 70%, #0FD8FA 73%, #0BD2FD 88%, #AFFDFF 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke: 1px #fff;
@@ -126,6 +126,10 @@ i.disabled {
 
 .cop {
   font-weight: 400;
+}
+
+.space {
+  letter-spacing: 1px;
 }
 
 .cop:before {
